gui_issue-#834_Inconvenient-label-wrap-in-Cluster-nodes-dashboard - fixed
Added "white-space: nowrap" to label styles, to prevent them wrapping.

--- a/client/src/components/cluster/Cluster.css
+++ b/client/src/components/cluster/Cluster.css
@@ -9,6 +9,7 @@
 }
 
 .node-main-info {
+  word-break: break-all;
   font-size: 20px;
   font-weight: 600;
   margin-right: 10px;
@@ -49,6 +50,7 @@
   margin-left: 1px;
   padding: 1px 3px;
   font-size: xx-small;
+  white-space: nowrap;
 }
 
 .node-label[data-run="true"] {
@@ -82,4 +84,3 @@
 .filter-actions-buttons-container {
   margin: 5px 10px;
 }
-
